# lab-02-cache

./: .main.cpp.swp  .travis.yml  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt.save.1  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  main.cpp  test_cache
Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  tests
include/: Cache.h  Header.h  Source.cpp
sources/: Source.cpp
